adding photon css and fonts and updating readme and index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Text Editor</title>
+	<link href="css/photon.min.css" rel="stylesheet" />
 </head>
 <body>
-	<div>Electron app</div>
+	<h1>Electron app</h1>
 </body>
 </html>
