sending info to renderer - when file saved, turn gree, red otherwise

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
     console.log('ipcRenderer', ipcRenderer)
     ipcRenderer.send('save', text);
   }
+
+  ipcRenderer.on('saved', (event, results) => {
+    if (results === 'success') { // TODO hardcoded value?
+      textarea.style.backgroundColor = 'green';
+    } else {
+      textarea.style.backgroundColor = 'red';
+    }
+    // TODO make these a pop up instead of colour change
+  });
 </script>
 
 </body>
